Re-work the code which checks the recorded build versions of a binary package to make pkg_add work properly when no +BUILD_INFO file exists.

Modify the return value from read_buildinfo() to return 1 for success
and 0 for failure.

Use symbolic constants, rather than integers.

If we can't read the build information, always tell of this fact.

Bump version to 20040730

Addresses PR 26429; a different version of these mods were verified to
allow a +BUILD_INFO-less binary package to be added by Martin Husemann.